# yad-tui

./: .gitignore  .nvim-dap.lua  .nvim-dap.lua.example  =  Cargo.toml  Config.toml  Makefile  README.md  flake.nix
.github/workflows/: ci.yml
src/: cli.rs  config.rs  disk_client.rs  events.rs  fs.rs  lib.rs  main.rs  meta_db.rs  model.rs  ui.rs  update.rs
src/ui_tools/: login_ui.rs  mod.rs
src/updaters/: login_form.rs
tests/: login_form_test.rs  model_test.rs
~/.cache/yad/: meta.db
