[package]
authors = ["honeydev <honeytype@ya.ru>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "yad-tui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive"] }
home = "0.5.9"
jammdb = "0.11.0"
log = { version = "0.4.22", features = ["std", "serde"] }
log4rs = "1.3.0"
ratatui = "0.27.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.127"
toml = "0.8.19"
ureq = { version = "2.10.1", features = ["json", "charset"] }

